--- a/VolumeKeeper/VolumeKeeper.csproj
+++ b/VolumeKeeper/VolumeKeeper.csproj
@@ -2,10 +2,32 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net9.0-windows</TargetFramework>
+        <TargetFramework>net9.0-windows10.0.19041.0</TargetFramework>
+        <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
+        <RootNamespace>VolumeKeeper</RootNamespace>
+        <ApplicationManifest>app.manifest</ApplicationManifest>
+        <Platform>x64;ARM64</Platform>
+        <RuntimeIdentifiers>win-x64;win-arm64</RuntimeIdentifiers>
         <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <UseWPF>true</UseWPF>
+        <UseWinUI>true</UseWinUI>
+        <WindowsPackageType>None</WindowsPackageType>
+        <EnableMsixTooling>true</EnableMsixTooling>
+        <WindowsAppSDKSelfContained>false</WindowsAppSDKSelfContained>
     </PropertyGroup>
+
+    <ItemGroup>
+        <Content Include="Assets\**" />
+        <None Remove="**\*.DS_Store" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
+        <PackageReference Include="H.NotifyIcon.WinUI" Version="2.2.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddition)' != 'true' And '$(EnableMsixTooling)' == 'true'">
+        <ProjectCapability Include="Msix" />
+    </ItemGroup>
 
 </Project>
