--- a/VolumeKeeper/VolumeKeeper.csproj
+++ b/VolumeKeeper/VolumeKeeper.csproj
@@ -6,7 +6,7 @@
         <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
         <RootNamespace>VolumeKeeper</RootNamespace>
         <ApplicationManifest>app.manifest</ApplicationManifest>
-        <Platform>x64;ARM64</Platform>
+        <Platforms>x64;ARM64</Platforms>
         <RuntimeIdentifiers>win-x64;win-arm64</RuntimeIdentifiers>
         <Nullable>enable</Nullable>
         <UseWinUI>true</UseWinUI>
@@ -24,6 +24,7 @@
         <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
         <PackageReference Include="H.NotifyIcon.WinUI" Version="2.2.0" />
+        <PackageReference Include="NAudio" Version="2.2.1" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddition)' != 'true' And '$(EnableMsixTooling)' == 'true'">
