--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,6 @@ insert_final_newline = true
 max_line_length = 140
 tab_width = 4
 trim_trailing_whitespace = true
+
+[*.{xml,xaml}]
+indent_size = 2
