--- a/VolumeKeeper/VolumeKeeper.csproj
+++ b/VolumeKeeper/VolumeKeeper.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
         <PackageReference Include="H.NotifyIcon.WinUI" Version="2.2.0" />
         <PackageReference Include="NAudio" Version="2.2.1" />
+        <PackageReference Include="System.Management" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddition)' != 'true' And '$(EnableMsixTooling)' == 'true'">
