--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-.claude/settings.local.json
+/.claude
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
