Fix archive files not being deleted

--- a/VolumeKeeper/NLog.config
+++ b/VolumeKeeper/NLog.config
@@ -19,18 +19,19 @@
             detectConsoleAvailable="true" />
 
     <!-- File target with rotation and delayed flush -->
+    <!-- https://github.com/NLog/NLog/wiki/File-target -->
     <target xsi:type="File"
             name="file"
-            fileName="${logDirectory}/volumekeeper_${shortdate}.log"
+            fileName="${logDirectory}/volumekeeper.log"
             layout="${springBootLayout}"
             archiveFileName="${logDirectory}/archives/volumekeeper_{#}.log"
             archiveEvery="Day"
             archiveNumbering="DateAndSequence"
             archiveDateFormat="yyyy-MM-dd"
             archiveAboveSize="10485760"
+            archiveOldFileOnStartup="true"
             maxArchiveFiles="10"
             maxArchiveDays="7"
-            concurrentWrites="true"
             keepFileOpen="true"
             autoFlush="false"
             openFileFlushTimeout="30"
@@ -38,10 +39,8 @@
   </targets>
 
   <rules>
-    <!-- Log everything to console at Debug level and above -->
+    <!-- Log everything to console and file at Debug level and above -->
     <logger name="*" minlevel="Debug" writeTo="console" />
-
-    <!-- Log everything to file at Debug level and above -->
     <logger name="*" minlevel="Debug" writeTo="file" />
   </rules>
 </nlog>
