--- a/VolumeKeeper/NLog.config
+++ b/VolumeKeeper/NLog.config
@@ -13,8 +13,9 @@
 
   <targets>
     <!-- Console target with Spring Boot-like format -->
-    <target xsi:type="Console"
+    <target xsi:type="ColoredConsole"
             name="console"
+            encoding="utf-8"
             layout="${springBootLayout}"
             detectConsoleAvailable="true" />
 
@@ -23,6 +24,7 @@
     <target xsi:type="File"
             name="file"
             fileName="${logDirectory}/volumekeeper.log"
+            encoding="utf-8"
             layout="${springBootLayout}"
             archiveFileName="${logDirectory}/archives/volumekeeper_{#}.log"
             archiveEvery="Day"
