Keep console enabled in debug builds

--- a/VolumeKeeper/NLog.config
+++ b/VolumeKeeper/NLog.config
@@ -17,7 +17,8 @@
             name="console"
             encoding="utf-8"
             layout="${springBootLayout}"
-            detectConsoleAvailable="true" />
+            detectConsoleAvailable="true"
+            enableAnsiOutput="true" />
 
     <!-- File target with rotation and delayed flush -->
     <!-- https://github.com/NLog/NLog/wiki/File-target -->
