--- a/VolumeKeeper/NLog.config
+++ b/VolumeKeeper/NLog.config
@@ -33,7 +33,7 @@
             archiveDateFormat="yyyy-MM-dd"
             archiveAboveSize="10485760"
             archiveOldFileOnStartup="true"
-            maxArchiveFiles="10"
+            maxArchiveFiles="7"
             maxArchiveDays="7"
             keepFileOpen="true"
             autoFlush="false"
@@ -42,7 +42,7 @@
   </targets>
 
   <rules>
-    <!-- Log everything to console and file at Debug level and above -->
+    <!-- Log everything at Debug level and above to console and file-->
     <logger name="*" minlevel="Debug" writeTo="console" />
     <logger name="*" minlevel="Debug" writeTo="file" />
   </rules>
