Fix: log files deletion (#11)

--- a/VolumeKeeper/NLog.config
+++ b/VolumeKeeper/NLog.config
@@ -13,24 +13,28 @@
 
   <targets>
     <!-- Console target with Spring Boot-like format -->
-    <target xsi:type="Console"
+    <target xsi:type="ColoredConsole"
             name="console"
+            encoding="utf-8"
             layout="${springBootLayout}"
-            detectConsoleAvailable="true" />
+            detectConsoleAvailable="true"
+            enableAnsiOutput="true" />
 
     <!-- File target with rotation and delayed flush -->
+    <!-- https://github.com/NLog/NLog/wiki/File-target -->
     <target xsi:type="File"
             name="file"
-            fileName="${logDirectory}/volumekeeper_${shortdate}.log"
+            fileName="${logDirectory}/volumekeeper.log"
+            encoding="utf-8"
             layout="${springBootLayout}"
             archiveFileName="${logDirectory}/archives/volumekeeper_{#}.log"
             archiveEvery="Day"
             archiveNumbering="DateAndSequence"
             archiveDateFormat="yyyy-MM-dd"
             archiveAboveSize="10485760"
-            maxArchiveFiles="10"
+            archiveOldFileOnStartup="true"
+            maxArchiveFiles="7"
             maxArchiveDays="7"
-            concurrentWrites="true"
             keepFileOpen="true"
             autoFlush="false"
             openFileFlushTimeout="30"
@@ -38,10 +42,8 @@
   </targets>
 
   <rules>
-    <!-- Log everything to console at Debug level and above -->
+    <!-- Log everything at Debug level and above to console and file-->
     <logger name="*" minlevel="Debug" writeTo="console" />
-
-    <!-- Log everything to file at Debug level and above -->
     <logger name="*" minlevel="Debug" writeTo="file" />
   </rules>
 </nlog>
